# cipher21

./: LICENSE.txt  README.md  setup.cfg
cipher20/: arguments_parser.py
cipher21/: application.py  arguments_parser.py  blocking_io.py  bytes_utils.py  constants.py  decrypter.py  encrypter.py  key.py  null_stream.py  operation_mode.py  stream_attributes.py  typing.py
tests/: test_application.py  test_bytes_utils.py  test_key.py
