[metadata]
name = cipher21
version = 0.1.0-beta.1
author = Krzysztof Piotr Surdacki
description = Stream modern cipher simple application for 2021 year which uses XChaCha20-Poly1305
keywords = cli, console, command line, cipher, stream cipher, modern cipher,
           encrypt, encryption, encrypter, ChaCha, XChaCha, ChaCha20, XChaCha20, Poly1305,
           Authenticated Encryption, AE, AEAD, AES, AES256, 256 bit key
license = The MIT License
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksurdacki/cipher21
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security :: Cryptography

[options]
packages = cipher21
python_requires = ~= 3.6
install_requires = pycryptodome ~= 3.10.1
zip_safe = True

[options.entry_points]
console_scripts = cipher21 = cipher21.application:main
